@@ -207,7 +207,8 @@ if os.environ.has_key('NZBOP_SCRIPTDIR') and not os.environ['NZBOP_VERSION'][0:5
 
     # All checks done, now launching the script.
     Logger.info("Script triggered from NZBGet, starting autoProcessTV...")
-    result = autoProcessTV.processEpisode(os.environ['NZBPP_DIRECTORY'], os.environ['NZBPP_NZBFILENAME'], status)
+    clientAgent = "nzbget"
+    result = autoProcessTV.processEpisode(os.environ['NZBPP_DIRECTORY'], os.environ['NZBPP_NZBFILENAME'], status, clientAgent, os.environ['NZBPP_CATEGORY'])
 # SABnzbd Pre 0.7.17
 elif len(sys.argv) == SABNZB_NO_OF_ARGUMENTS:
     # SABnzbd argv:
@@ -219,7 +220,8 @@ elif len(sys.argv) == SABNZB_NO_OF_ARGUMENTS:
     # 6 Group that the NZB was posted in e.g. alt.binaries.x
     # 7 Status of post processing. 0 = OK, 1=failed verification, 2=failed unpack, 3=1+2
     Logger.info("Script triggered from SABnzbd, starting autoProcessTV...")
-    result = autoProcessTV.processEpisode(sys.argv[1], sys.argv[2], sys.argv[7])
+    clientAgent = "sabnzbd"
+    result = autoProcessTV.processEpisode(sys.argv[1], sys.argv[2], sys.argv[7], clientAgent, sys.argv[5])
 # SABnzbd 0.7.17+
 elif len(sys.argv) >= SABNZB_0717_NO_OF_ARGUMENTS:
     # SABnzbd argv:
@@ -232,7 +234,8 @@ elif len(sys.argv) >= SABNZB_0717_NO_OF_ARGUMENTS:
     # 7 Status of post processing. 0 = OK, 1=failed verification, 2=failed unpack, 3=1+2
     # 8 Failure URL
     Logger.info("Script triggered from SABnzbd 0.7.17+, starting autoProcessTV...")
-    result = autoProcessTV.processEpisode(sys.argv[1], sys.argv[2], sys.argv[7])
+    clientAgent = "sabnzbd"
+    result = autoProcessTV.processEpisode(sys.argv[1], sys.argv[2], sys.argv[7], clientAgent, sys.argv[5])
 else:
     Logger.debug("Invalid number of arguments received from client.")
     Logger.info("Running autoProcessTV as a manual run...")
